exports[`test should render a default table 1`] = `
<table
  className="table striped padded">
  <TableHeader>
    <TableHeaderCell
      content="Name"
      minWidth="small" />
    <TableHeaderCell
      content="Address"
      minWidth="small" />
    <TableHeaderCell
      content="Phone Number"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
  </TableRows>
</table>
`;

exports[`test should render a table without padding 1`] = `
<table
  className="table striped">
  <TableHeader>
    <TableHeaderCell
      content="Name"
      minWidth="small" />
    <TableHeaderCell
      content="Address"
      minWidth="small" />
    <TableHeaderCell
      content="Phone Number"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
  </TableRows>
</table>
`;

exports[`test should render a table without zebra stripes 1`] = `
<table
  className="table padded">
  <TableHeader>
    <TableHeaderCell
      content="Name"
      minWidth="small" />
    <TableHeaderCell
      content="Address"
      minWidth="small" />
    <TableHeaderCell
      content="Phone Number"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableCell
        content="John Smith" />
      <TableCell
        content="123 Adams Drive" />
      <TableCell
        content="111-222-3333" />
    </TableRow>
  </TableRows>
</table>
`;
